--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   photo_view: ^0.12.0
   carousel_slider: ^4.0.0
+  google_mobile_ads: ^0.13.3
+  image_picker: ^0.8.3+3
+  shared_preferences:
+  path_provider:
 
 dev_dependencies:
   flutter_test:
